# newsletter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 0001_setup.sql  0002_subscription.sql
src/: lib.rs
src/routes/: health_check.rs  mod.rs  subscription.rs
tests/: health_check.rs
